--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "*", features = ["full"] }
+webdav-handler = { git = "https://github.com/Arkitu/webdav-handler-rs", features = ["actix-compat"]}
+actix-web = "4.4.0"
+env_logger = "0.10.0"
+http = "0.2.9"
+futures = "0.3.28"
+pin-project = "1.1.3"
+http-body = "0.4.5"
+bytes = "1"
