--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ futures = "0.3.28"
 pin-project = "1.1.3"
 http-body = "0.4.5"
 bytes = "1"
+rusqlite = { version = "0.29.0", features = ["chrono"] }
+tokio-rusqlite = "0.4.0"
+chrono = "0.4.31"
