--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ bytes = "1"
 rusqlite = { version = "0.29.0", features = ["chrono"] }
 tokio-rusqlite = "0.4.0"
 chrono = "0.4.31"
+reqwest = "0.11.22"
