--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ tokio-rusqlite = "0.4.0"
 chrono = "0.4.31"
 reqwest = "0.11.22"
 dotenv = "0.15.0"
+serde_json = "1.0.107"
+serde = { version = "1.0.188", features = ["derive"] }
