--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ http-body = "0.4.5"
 bytes = "1"
 rusqlite = { version = "0.29.0", features = ["chrono"] }
 tokio-rusqlite = "0.4.0"
-chrono = "0.4.31"
+chrono = { version = "0.4.31", features = ["serde"] }
 reqwest = "0.11.22"
 dotenv = "0.15.0"
 serde_json = "1.0.107"
