--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ bytes = "1"
 rusqlite = { version = "0.29.0", features = ["chrono"] }
 tokio-rusqlite = "0.4.0"
 chrono = { version = "0.4.31", features = ["serde"] }
-reqwest = "0.11.22"
+reqwest = { version = "0.11.22", features = ["multipart"] }
 dotenv = "0.15.0"
 serde_json = "1.0.107"
 serde = { version = "1.0.188", features = ["derive"] }
