--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ reqwest = { version = "0.11.22", features = ["multipart"] }
 dotenv = "0.15.0"
 serde_json = "1.0.107"
 serde = { version = "1.0.188", features = ["derive"] }
+percent-encoding = "2.3.0"
