--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ dotenv = "0.15.0"
 serde_json = "1.0.107"
 serde = { version = "1.0.188", features = ["derive"] }
 percent-encoding = "2.3.0"
+log = "0.4.20"
